populating_data_main_page

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
 
 <title>RaviReadymade | One of the Biggest Online Shopping Platform</title>
 
-<link href="static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-<!-- {% static 'images/favicon.ico' %} -->
+<link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
+<!--  -->
 <!-- jQuery -->
 <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
 
