--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -8,7 +8,7 @@
 			<div class="col-md-8 text-md-center">
 				<span  class="px-2">ravireadymade1982@gmail.com</span>
 				<span  class="px-2">+91-9413913002</span>
-				<span  class="px-2">35, Hope Circus, Alwar(Raj.)</span>
+				<span  class="px-2">35A, Hope Circus, Alwar(Raj.)</span>
 			</div>
 			<div class="col-md-2 text-md-right text-muted">
 				<i class="fab fa-lg fa-cc-visa"></i>
