--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -68,8 +68,8 @@
                                 </td>
                                 <td>
                                     <div class="price-wrap">
-                                        <var class="price">$ {{ cart_item.sub_total }}</var>
-                                        <small class="text-muted"> $ {{ cart_item.product.price }} each </small>
+                                        <var class="price">Rs.{{ cart_item.sub_total }}</var>
+                                        <small class="text-muted">Rs.{{ cart_item.product.price }} each </small>
                                     </div> <!-- price-wrap .// -->
                                 </td>
                     
@@ -146,6 +146,7 @@
         var csrftoken = getCookie('csrftoken');
         var orderID = "{{order.order_number}}"
         var payment_method = 'PayPal'
+        var redirect_url = "{% url 'order_complete' %}"
 
             paypal.Buttons({
         
@@ -189,6 +190,7 @@
                         })
                         .then((response) => response.json())
 				        .then((data) => {
+                            console.log(data)
 						    window.location.href = redirect_url + '?order_number='+data.order_number+'&payment_id='+data.transID;
 					    });
                     }
