--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -85,7 +85,7 @@
 
         </header>
 
-        <form action="" method = 'POST'>
+        <form action="{% url 'submit_review' single_product.id %}" method = 'POST'>
             {% csrf_token %}
             <h5>Write Your Review</h5>
             <div>
