--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -22,6 +22,16 @@
             <article class="content-body">
 
               <h2 class="title">{{single_product.product_name}}</h2>
+              <div class="rating-star">
+                <span>
+                  <i class="fa fa-star{% if average == 0.5 %}-half-o {% elif average < 1 and average > 0 %}-half-o {% elif average < 1 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if average == 1.5 %}-half-o {% elif average < 2 and average > 1 %}-half-o {% elif average < 2 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if average == 2.5 %}-half-o {% elif average < 3 and average > 2 %}-half-o {% elif average < 3 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if average == 3.5 %}-half-o {% elif average < 4 and average > 3 %}-half-o {% elif average < 4 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if average == 4.5 %}-half-o {% elif average < 5 and average > 4 %}-half-o {% elif average < 5 %}-o{% endif %}" aria-hidden = 'true'></i>
+               
+                </span>
+              </div>
 
               <div class="mb-3">
                 <var class="price h4">Rs.{{single_product.price}}</var>
@@ -80,10 +90,6 @@
     <div class="row">
       <div class="col-md-9">
 
-        <header class="section-heading">
-          <h3>Customer Reviews </h3>
-
-        </header>
 
         <form action="{% url 'submit_review' single_product.id %}" method = 'POST'>
             {% csrf_token %}
@@ -112,30 +118,65 @@
               Review:
               <textarea name="review" rows="4" class="form-control"></textarea>
               <br>
-              <input type="submit" value="Submit Review" class="btn btn-primary">
               
+              {% if user.is_authenticated %}
+                {% if orderproduct %}
+                  <input type="submit" value="Submit Review" class="btn btn-primary">
+                {% else %}
+                  <p>You must purchase this product to post a review.</p>
+                {% endif %}
+              {% else %}
+                <p>You must be logged in to post review. <span><a href="{% url 'login' %}">Login now</a></span></p>
+              {% endif %}
+
             </div>
+            {% include 'includes/alerts.html' %}
         </form>
         <br>
+        
+        {% if reviewratings %}
+
+        <header class="section-heading">
+          <h3>Customer Reviews </h3>
+          <div class="rating-star">
+            <span>
+              <i class="fa fa-star{% if average == 0.5 %}-half-o {% elif average < 1 and average > 0 %}-half-o {% elif average < 1 %}-o{% endif %}" aria-hidden = 'true'></i>
+              <i class="fa fa-star{% if average == 1.5 %}-half-o {% elif average < 2 and average > 1 %}-half-o {% elif average < 2 %}-o{% endif %}" aria-hidden = 'true'></i>
+              <i class="fa fa-star{% if average == 2.5 %}-half-o {% elif average < 3 and average > 2 %}-half-o {% elif average < 3 %}-o{% endif %}" aria-hidden = 'true'></i>
+              <i class="fa fa-star{% if average == 3.5 %}-half-o {% elif average < 4 and average > 3 %}-half-o {% elif average < 4 %}-o{% endif %}" aria-hidden = 'true'></i>
+              <i class="fa fa-star{% if average == 4.5 %}-half-o {% elif average < 5 and average > 4 %}-half-o {% elif average < 5 %}-o{% endif %}" aria-hidden = 'true'></i>
+           
+            </span>
+          </div>
+        </header>
+        {% for review in reviewratings %}
         <article class="box mb-3">
           <div class="icontext w-100">
-            <img src="{% static 'images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
-            <div class="text">
-              <span class="date text-muted float-md-right">24.04.2020 </span>
-              <h6 class="mb-1">Mike John </h6>
 
+            <div class="text">
+              <span class="date text-muted float-md-right">{{ review.created_at.date }} </span>
+              <h6 class="mb-1">{{ review.user.full_name }}</h6>
+              <div class="rating-star">
+                <span>
+                  <i class="fa fa-star{% if review.rating == 0.5 %}-half-o{% elif review.rating < 1 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if review.rating == 1.5 %}-half-o{% elif review.rating < 2 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if review.rating == 2.5 %}-half-o{% elif review.rating < 3 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if review.rating == 3.5 %}-half-o{% elif review.rating < 4 %}-o{% endif %}" aria-hidden = 'true'></i>
+                  <i class="fa fa-star{% if review.rating == 4.5 %}-half-o{% elif review.rating < 5 %}-o{% endif %}" aria-hidden = 'true'></i>
+               
+                </span>
+              </div>
             </div>
           </div> <!-- icontext.// -->
           <div class="mt-3">
+            <h6>{{ review.subject }}</h6>
             <p>
-              Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip
+              {{ review.review }}
             </p>
           </div>
         </article>
-
-
+        {% endfor %}
+        {% endif %}
 
       </div> <!-- col.// -->
     </div> <!-- row.// -->
