--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -141,7 +141,8 @@
         }
 
 
-        var amount = 0.1
+        var amount = "{{ grand_total }}"
+        // var amount = 0.1
         var url = "{% url 'payments' %}"
         var csrftoken = getCookie('csrftoken');
         var orderID = "{{order.order_number}}"
